Input zip fixed, Dark mode small fixes

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -18,7 +18,6 @@
     "Segoe UI Emoji",
     "Segoe UI Symbol",
     "Noto Color Emoji";
-  background-color: gray-800;
 }
 
 @layer components {
